Thu Aug 19 13:31:37 BST 2004  Olly Betts <olly@survex.com>

	* matcher/localmatch.cc: Fixed problems handling termweights in
	  queries with the same term repeated (bug #37).

Thu Aug 19 13:22:12 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_table.cc: Disable the "lazy tag reading" in
	  QuartzCursor for the time being - it seems to cause problems.

Thu Aug 19 12:58:10 BST 2004  Olly Betts <olly@survex.com>

	* bin/quartzcheck.cc,bin/quartzdump.cc: Added calls to
	  QuartzCursor::read_tag().

Thu Aug 19 12:56:53 BST 2004  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Removed superfluous clear() of a map.

Thu Aug 19 12:56:08 BST 2004  Olly Betts <olly@survex.com>

	* tests/api_db.cc: Corrected a comment - a pure boolean query has all
	  weights set to 0, not 1.

Mon Aug 16 15:41:33 BST 2004  Olly Betts <olly@survex.com>

	* docs/: Removed unused and very out of date class diagrams in dia
	  format.  Doxygen generates similar but up-to-date diagrams
	  automatically anyway.

Mon Aug 16 15:27:30 BST 2004  Olly Betts <olly@survex.com>

	* xapian.spec.in,debian/libxapianVERSION-dev.install,
	  extra/.cvsignore,extra/Makefile.am,extra/omparsequery.h,
	  include/Makefile.am,include/om/.cvsignore,include/om/dir_contents,
	  include/om/om.h,m4/xapian.m4: Removed the compatibility layer which
	  allowed programs written against the pre-0.7.0 API to be compiled.

Mon Aug 16 15:08:08 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_table.cc: Fixed QuartzCursor::find()
    	  to work again after the last change.

Mon Aug 16 14:43:08 BST 2004  Olly Betts <olly@survex.com>

	* backends/quartz/,tests/quartztest.cc: QuartzCursor no longer
	  automatically reads the tag - you have to call read_tag() to
	  get it read.  This speeds up iterator over all the terms in
	  a database.  Also commented out QuartzCursor::prev as it's
	  unused and untested (at least in its latest form).
